# document2chunk

./: .dockerignore  .env.example  .gitignore  DEPLOY_112.md  Dockerfile  Dockerfile.d2c  conftest.py  docker-compose.d2c.yml  docker-compose.yml  issues2.md  issues3.md  pyproject.toml  澄清1.md  澄清2.md
docs/: chinese-typo-correction-research.md  coding-standards.md  ocr-service-integration.md
mineru2doc/: README.md  __init__.py  __main__.py  cli.py  loader.py  markdown_parser.py  model.py  normalize.py  regex_patterns.py  render.py  server.py  title_judge.py
mineru2doc/tests/: test_cli.py  test_loader.py  test_markdown_parser.py  test_normalize.py  test_regex_patterns.py  test_render.py  test_title_judge.py
openspec/: API_SPEC.md  INTEGRATION.md  SESSIONS.md  parallel-plan.md  project.md  tasks.md
openspec/designs/: 001-target-architecture.md  002-pdf-extractor-reuse-map.md  003-edited-pdf-source-summary.md  004-pdf-layout-span-fusion.md  005-ocr-heading-calibration.md  006-processing-architecture.md  007-issues2-analysis.md  008-issues3-analysis.md  008-table-recognition-service.md  009-table-as-image.md  009-unified-postprocess-architecture.md  (+2 more)
scripts/: batch_test.py
tests/: _fixtures.py  test_api.py  test_debug_viz.py  test_docx.py  test_export.py  test_ir_smoke.py  test_layout_fusion.py  test_markdown_parser.py  test_ocr_extractor.py  test_ocr_provenance_path.py  test_pdf_extractor.py  test_pipeline.py  test_postprocess.py  test_structure.py  test_table_extractor.py  test_table_geo_ocr.py  test_table_geo_reconstruct.py  test_table_image.py
(+89 files in other folders)
